<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:backgroundTint="@color/blue"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <EditText
        android:id="@+id/editT1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nickname" />

    <EditText
        android:id="@+id/editT2"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/firstname"
        tools:ignore="TouchTargetSizeCheck" />


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/aclonica"
        android:text="@string/check"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="monospace"
        android:textStyle="italic"
        android:text="@string/cookies" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="412dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:fontFamily="monospace"
        android:text="@string/wifi" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-black"
        android:text="@string/accept" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_weight="1"
        android:fontFamily="@font/aclonica"
        android:text="ToggleButton" />
</LinearLayout>